# LTS_modelling

./: README.md
bootstrap/: bootstrap_all.R  bootstrap_plots.Rmd  clean_all_nat.rds  clean_all_slow.rds  clean_all_weeks.rds  clean_is7_nat.rds  clean_is7_slow.rds  clean_is7_weeks.rds  clean_less7_nat.rds  clean_less7_slow.rds  clean_less7_weeks.rds  full_all_nat.rds  full_all_slow.rds  full_all_weeks.rds  full_is7_nat.rds  full_is7_slow.rds  full_is7_weeks.rds  full_less7_nat.rds  full_less7_slow.rds  full_less7_weeks.rds
preliminary analysis/: analysis_4ph.R  estimated_to_p1204.R  mos_plots.R  p1204_raw.csv  phase4_getdata.R  phase4_update_lts.csv  plots_for_lts_IEEE_TOM.Rmd
pyits/: LICENSE.txt  PLots.R  PlotsR.ipynb  README.md  analysis.ipynb  pyproject.toml
pyits/log/: hdtv.csv  its.csv
pyits/pyits/: __init__.py  __main__.py
pyits/tests/: __init__.py
